# tfg_racecar_ws

./: .gitignore  README.md  src.rar
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/racecar_cone_msgs/: Centerline.h  Cone.h  ConeArray.h  ConePair.h  ConePairArray.h  MidpointArray.h  TrackMetrics.h
devel/lib/pkgconfig/: racecar_ackermann_mux.pc  racecar_cone_detection_lidar.pc  racecar_cone_msgs.pc  racecar_description.pc  racecar_pure_pursuit.pc  racecar_pure_pursuit_control.pc  racecar_sim_control.pc  racecar_sim_gazebo.pc  racecar_track_geometry.pc
devel/lib/python2.7/dist-packages/racecar_cone_msgs/msg/: _Centerline.py  _Cone.py  _ConeArray.py  _ConePair.py  _ConePairArray.py  _MidpointArray.py  _TrackMetrics.py  __init__.py
devel/share/common-lisp/ros/racecar_cone_msgs/msg/: Centerline.lisp  Cone.lisp  ConeArray.lisp  ConePair.lisp  ConePairArray.lisp  MidpointArray.lisp  TrackMetrics.lisp  _package.lisp  _package_Centerline.lisp  _package_Cone.lisp  _package_ConeArray.lisp  _package_ConePair.lisp  _package_ConePairArray.lisp  _package_MidpointArray.lisp  _package_TrackMetrics.lisp  racecar_cone_msgs-msg.asd
devel/share/gennodejs/ros/racecar_cone_msgs/msg/: Centerline.js  Cone.js  ConeArray.js  ConePair.js  ConePairArray.js  MidpointArray.js  TrackMetrics.js  _index.js
devel/share/racecar_ackermann_mux/cmake/: racecar_ackermann_muxConfig.cmake
devel/share/racecar_cone_detection_lidar/cmake/: racecar_cone_detection_lidarConfig.cmake
devel/share/racecar_cone_msgs/cmake/: racecar_cone_msgs-msg-paths.cmake  racecar_cone_msgsConfig.cmake
devel/share/racecar_description/cmake/: racecar_descriptionConfig.cmake
devel/share/racecar_pure_pursuit/cmake/: racecar_pure_pursuitConfig.cmake
devel/share/racecar_pure_pursuit_control/cmake/: racecar_pure_pursuit_controlConfig.cmake
devel/share/racecar_sim_control/cmake/: racecar_sim_controlConfig.cmake
devel/share/racecar_sim_gazebo/cmake/: racecar_sim_gazeboConfig.cmake
devel/share/racecar_track_geometry/cmake/: racecar_track_geometryConfig.cmake
devel/share/roseus/ros/racecar_cone_msgs/: manifest.l
docs/: ARCHITECTURE_OVERVIEW.md  LABORATORY_PLAYBOOK.md  MSG_API.md  ROS_NAMING_STANDARD.md  RUNBOOK.md  launch_architecture.md
src/ackermann_cmd_mux/: CMakeLists.txt
src/racecar/: CMakeLists.txt
src/racecar/config/racecar-v2/: joy_teleop.yaml  joy_teleop_sim.yaml  sensors.yaml  vesc.yaml
src/racecar/launch/: mux.launch
src/racecar/launch/includes/common/: joy_teleop_sim.launch.xml
src/racecar_ackermann_mux/: CMakeLists.txt
src/racecar_ackermann_mux/config/: mux.yaml
src/racecar_ackermann_mux/launch/: mux.launch
src/racecar_ackermann_mux/launch/core/: ackermann_mux.launch
src/racecar_ackermann_mux/scripts/: ackermann_cmd_simple_mux.py
src/racecar_cone_detection_lidar/: CMakeLists.txt  README.md  package.xml
src/racecar_cone_detection_lidar/config/: detector.yaml
src/racecar_cone_detection_lidar/docs/: topics.md  tuning.md
src/racecar_cone_detection_lidar/launch/: scan_to_cones.launch
src/racecar_cone_detection_lidar/launch/core/: cone_detection.launch
src/racecar_cone_detection_lidar/scripts/: cone_detector_node.py  cone_error_evaluator.py  cones_debug_viewer.py  error_evaluator_node.py  scan_to_cones.py  scan_to_cones_prev3.py  scan_to_cones_prev4.py
src/racecar_cone_msgs/: CMakeLists.txt
src/racecar_cone_msgs/msg/: Centerline.msg  Cone.msg  ConeArray.msg  ConePair.msg  ConePairArray.msg  MidpointArray.msg  TrackMetrics.msg
src/racecar_description/launch/: view_chassis.launch
src/racecar_description/launch/tools/: view_robot_model.launch
src/racecar_description/meshes/: cone.dae
src/racecar_description/rviz/: racecar.rviz
src/racecar_description/urdf/: macros.xacro
src/racecar_pure_pursuit/: CMakeLists.txt  package.xml
src/racecar_pure_pursuit/config/: pure_pursuit.yaml
src/racecar_pure_pursuit/launch/: pure_pursuit.launch
src/racecar_pure_pursuit/launch/core/: target_selector.launch
src/racecar_pure_pursuit/scripts/: pure_pursuit_target_selector.py
src/racecar_pure_pursuit_control/: CMakeLists.txt
src/racecar_pure_pursuit_control/config/: pp_control.yaml  pure_pursuit_control.yaml  pure_pursuit_control_real.yaml
src/racecar_pure_pursuit_control/launch/: pure_pursuit_control.launch
src/racecar_pure_pursuit_control/launch/core/: controller.launch
src/racecar_pure_pursuit_control/scripts/: pure_pursuit_controllers.py
src/racecar_sim_control/: CMakeLists.txt  package.xml
src/racecar_sim_control/config/: common.yaml
src/racecar_sim_control/config/overrides/: real.yaml  sim.yaml
src/racecar_sim_control/config/vehicle/: racecar-v2.yaml
src/racecar_sim_control/launch/: cones_perception_teleop.launch  fixed_path_control.launch  gazebo_sim_joy.launch  minimal_teleop.launch  racecar_control.launch  real_vehicle_control.launch  teleop.launch
src/racecar_sim_control/launch/bringup/: low_level_control.launch
src/racecar_sim_control/launch/scenarios/: fixed_path_pipeline.launch  real_vehicle_pipeline.launch
src/racecar_sim_control/scripts/: keyboard_teleop.py  servo_commands.py  teleop_fix_path.py
src/racecar_sim_gazebo/: CMakeLists.txt  package.xml
src/racecar_sim_gazebo/launch/: racecar_with_cones_perception.launch  spawn_cones.launch
src/racecar_sim_gazebo/launch/scenarios/: sim_perception_pipeline.launch
src/racecar_sim_gazebo/scripts/: gazebo_odometry.py  odom_to_tf.py  spawn_cones_zigzag.py
src/racecar_track_geometry/: CMakeLists.txt  README.md  package.xml
src/racecar_track_geometry/config/: centerline.yaml  pairing.yaml  track_viz.yaml
src/racecar_track_geometry/launch/: track_debug.launch  track_geometry.launch
src/racecar_track_geometry/launch/core/: track_estimation.launch
src/racecar_track_geometry/rviz/: cone_perception.rviz  track_debug.rviz
src/racecar_track_geometry/scripts/: bins_live_view.py  centerline_debug_listener.py  centerline_fit_node.py  centerline_to_path_node.py  lr_pairing_debug_viewer.py  lr_pairing_node.py  midpoints_node.py  track_viz.py
(+7 files in other folders)
