<?xml version="1.0"?>
<package format="2">
  <name>racecar_pure_pursuit</name>
  <version>0.1.0</version>
  <description>Pure Pursuit target selection (s*-based) and adaptive lookahead Ld for Mario TFG</description>

  <maintainer email="mario@example.com">Mario</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
