<?xml version="1.0"?>
<package format="2">
  <name>racecar_sim_control</name>
  <version>0.1.0</version>
  <description>Launches y nodos Python para teleoperación y control en simulación.</description>

  <maintainer email="mario@example.com">Mario</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Lo que realmente usas en CMake (find_package) -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager</depend>

  <!-- Sólo en ejecución (los cargas vía launch/spawner, no compilas contra ellos) -->
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <!-- Para instalar/usar ficheros de launch/config -->
  <exec_depend>roslaunch</exec_depend>
</package>
