<?xml version="1.0"?>
<package format="2">
  <name>racecar_track_geometry</name>
  <version>0.1.0</version>
  <description>Emparejado L–R, generación de midline y métricas.</description>
  <maintainer email="mario@example.com">Mario</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>racecar_cone_msgs</depend>
  <export/>
</package>
